--- a/ProjectProposal.tex
+++ b/ProjectProposal.tex
@@ -6,22 +6,22 @@
 	\input{title.tex}
 	%make the abstract
 	\begin{abstract}
-		Design Team 3 as been asked to create a system to keep track of  and ensure complacence for the safety equipment on Arcelormittal's buildings. To do this the team needs to build three septate systems, a collection server scripts to manage a database, generate reports, and send reminder emails. A web based application to allow administrators to add items to a database and perspective tasks.A Android application to scan bar codes and recode response to assigned question.This project proposal is broken into two parts, first the project is defined in a way that hopefully will do the fowling:\todo{This jusmps around I to much}
+		Design Team 3 has been asked to create a system to keep track of safety equipment on ArcelorMittal's buildings. To do this the team needs to build some systems. These systems will enable administrators to both monitor compliance standards on areas they are in charge of, and make sure that safety equipment is being properly checked and documented. Reports will be sent out periodically on the above to said administrators.  On the user end, an Android application  that uses a scanner will be created that will enable users to quickly answer questions on safety equipment standards.  This project proposal is broken into the following parts:\todo{This jusmps around I to much}
 		\begin{enumerate}
-			\item Demonstrate the teams current understanding of the project.
-			\item Define the project in such a way that it will be.
+			\item The teams current understanding of the project.
+			\item Define the project in such a way that it will be easy to follow for developers that are maintaining the project for years to come.
 			\item Demonstrate that the team has internalized the design challenge faced.
 		\end{enumerate}
 	\end{abstract}
 
 \section{Project Definition}\label{def}
-	This project team has been assigned an industry sponsored project from Arcelormittal USA, who need a way to track there industrial safety equipment in there buildings. in order to build this system the design team will need to build 3 primary system: an Android application for operators to scan bar codes on safety locations and equipment. A web application to alow administrators to build a database of safety equipment, asinine responsibility create and associate questions with locations or safety equipment. Final a server infrastructure to ensure data is held properly, host the web app, connect to the Andord app, generate reports, and reminders for inspections. 
+	This team has been assigned an industry sponsored project from ArcelorMittal USA, who need a way to track their industrial safety equipment within their buildings In order to build the specified system Team 6 will need to build three primary systems. The first being an Android application for operators to scan bar codes on safety locations and equipment. A web application to allow administrators to specify questions for specific pieces of safety equipment, and furthermore assign responsibility to workers. Finally a server infrastructure will be created to ensure data is held properly and securely, host the web application, connect to the Android app, and generate reports. 
 	\subsection{Scope}\label{scope}
 	In order to guide the teams design project and ensure the project has limits of what the team will build, a project scope has been defined:
 		\begin{itemize}
 			\item Mobile Application
 			\begin{itemize}
-				\item Off line Mode
+				\item Off-line Mode
 				\item Bar code Scanning
 				\item Bar code based questions
 			\end{itemize}
@@ -41,9 +41,9 @@
 				\subitem Questions
 				\item Add Questions to reports
 				\item Create timetable for reports
-				\item Add rcipeants to reports
+				\item Add recipient to reports
 			\end{itemize}
-			\item Sever side Database and middle where
+			\item Sever side Database and middle-ware
 			\begin{itemize}
 				\item Host:
 				\subitem Web application
@@ -52,7 +52,7 @@
 			\end{itemize}
 		\end{itemize}
 	\subsection{Function Definition} \todo{I just played word match with the lists he had in the slides, we may need more of these}
-		In order to justify the existence of items in Part~\ref{scope} the team created a number of function definitions. These definitions were then consolidated into the FAST diagram in Figure~\ref{fast1} along with a more detailed disciption.
+		In order to justify the existence of items in Part~\ref{scope} the team created a number of function definitions. These definitions were then consolidated into the FAST diagram in Figure~\ref{fast1} along with a more detailed description.
 		\begin{figure}[h]
 			\centering
 			\input{FastDG.tex}
@@ -60,7 +60,7 @@
 		\end{figure}
 		The Primary function for the project is \textbf{Ensure Compliance} This is the main goal of the system we have been commissioned to build. From our primary function are derived two secondary functions each having there own tertiary functions:\todo{I think the main probum with what i have here is that i dont talk abut how things are mesured}  
 		\begin{itemize}
-			\item Verify Standers:\\
+			\item Verify Standards:\\
 			In order to Ensure Compliance with all pertinent safety regulations the system must be able to check the and verify that all the stranded are being upheld in the various locations and across the numerous safety devices.
 			\item Keep Records:\\
 			In order to ensure that all of the safety laws and regulations are fallowed we mus keep records of all the locations witch must have safety equipment present in a building, what safety equipment must be present, and how to verrify that it is in working condition.  
