Fixed a couple more things

--- a/ProjectProposal.tex
+++ b/ProjectProposal.tex
@@ -100,20 +100,20 @@
 		
 		
 	\subsection{Preliminary Set up}\label{cyc1}
-		In the first cycle the team peruses actions witch move to the understanding of the finer details of the system it has been tasked to build. This cycle includes several instances of contact with the sponsor in order to both better understand the costumers needs and build a relationship for ongoing communication. At the end of this cycle the team will deliver a project proposal to the faculty advisor and the project sponsor along with having verified that the most basic functionality of the Database, Web application, Android application and design mock-ups for the later two. 
+		In the first cycle the team pursues actions which move to the understanding of the finer details of the system it has been tasked to build. This cycle includes several instances of contact with the sponsor in order to both better understand the customers needs and build a relationship for ongoing communication. At the end of this cycle the team will deliver a project proposal to the faculty advisor and the project sponsor along with having verified that the most basic functionality of the database, web application, Android application and design mock-ups. 
 		
 		\begin{itemize}
 			\item\textbf{Meet with Sponsor:}(The Team)\\
-			The team prepares questions and meets in person with the Jim Lang from ArcelorMittal. In order to better understand the needs layed out in the project description. In this meeting the project sponsor was promoted to priorities key features and  describe what a successfully project would entail.
+			The team prepares questions and meets in person with the Jim Lang from ArcelorMittal. In order to better understand the needs layed out in the project description. In this meeting the project sponsor was asked to describe key features and  what a successfully project looked like was discussed.
 			
 			\item \textbf{Solidify Understanding of Project:}(The Team)\\
-			In this task the Team meats to discus the what was learned in the meeting with the project sponsor. In order to layout the framework in witch the team can build the requested system.
+			In this task the Team meets to discuss what was learned in the meeting with the project sponsor previously. In order to layout the framework in which the team can build the requested system.
 			
 			\item\textbf{Additional Questions for Sponsor:}(The Team)\\
 			After exhaustive discussion on the both the high level work flows and technical feasibility of the project the team will compose a set of questions to be electronically mailed to the project sponsor in order to clear up lingering discontinuity in the teams understanding of the system.
 			
 			\item\textbf{Set up Database:}(Alexandria \& Ian)\\
-			In this task two team members will decide on a framework for building the server side infrastructure for the system. This will include choosing and setting up the server operating system, cusing the main programing language to be used for building the sever infrastructure.
+			In this task two team members will decide on a framework for building the server side infrastructure for the system. This will include choosing and setting up the server operating system, choosing the main programing language to be used for building the sever infrastructure.
 			
 			\item\textbf{Hello World on Tablet:}(Kyle)\\
 			In this task a team member will build a simple hello world program for style of android tablet indicated by the project sponsor. In building a hello world program for the tablet the team member will also choose a library for decoding bar codes using the tablet camera. 
