acouple of things

--- a/seting_etc.tex
+++ b/seting_etc.tex
@@ -10,6 +10,10 @@
 \usepackage{lscape}
 \usepackage{tikz-er2}
 \usepackage{fast-diagram}
+\usepackage{tikz}
+
+
+\usetikzlibrary{shapes.geometric, arrows}
 
 
 \newcommand{\labs}{\renewcommand{\chaptername}{Lab}}
