--- a/ProjectProposal.tex
+++ b/ProjectProposal.tex
@@ -6,7 +6,8 @@
 	\input{title.tex}
 	%make the abstract
 	\begin{abstract}
-		Design Team 3 as been asked to create a system to keep track of  and ensure complacence for the safety equipment on Arcelormittal's buildings. To do this the team needs to build three septate systems, a collection server scripts to manage a database, generate reports, and send reminder emails. A web based application to allow administrators to add items to a database and perspective tasks.A Android application to scan bar codes and recode response to assigned question.This project proposal is broken into two parts, first the project is defined in a way that hopefully will do the fowling:\todo{This jusmps around I to much}
+		Design Team 3 has been asked to create a system to keep track of  and ensure complacence for the safety equipment on ArcelorMital's buildings. With the desired outcome to be generated reports based on safety equiptment inspections.
+		  To do this the team needs to build three separate systems. The database for maintaining records, a process for generating reports to be sent in an email on a timely basis. Lastly. a web based application to allow administrators to add items to a database and perspective tasks for workers. An Android application to scan bar codes and recode response to assigned question.This project proposal is broken into two parts, first the project is defined in a way that hopefully will do the fowling:\todo{This jusmps around I to much}
 		\begin{enumerate}
 			\item Demonstrate the teams current understanding of the project.
 			\item Define the project in such a way that it will be.
@@ -85,7 +86,11 @@
 	\subsection{Work flow}
 		Here the team will use the data from the project description provided an example of how the team plans the how the system will be used.
 		  
-	
+		\begin{figure}
+			\centering
+			\input{flow1.tex}
+			\caption{\label{flow1} Database entity relations Diagram}
+		\end{figure}
 	\subsection{Data Relations}
 		In order to see how items in the system are related to each other the team has created a entity relation diagram. \todo{Dose this add anything? It was usful for me}
 		\begin{figure}[h]
@@ -93,7 +98,13 @@
 			\input{DB_ER.tex}
 			\caption{\label{ERdiogram} Database entity relations Diagram}
 		\end{figure}
+	\subsection{Technical Design}
 		
+		\begin{figure}[h]
+			\centering
+			\input{SysConect.tex}
+			\caption{\label{sysConn} Database entity relations Diagram}
+		\end{figure}
 	
 \section{Scheduling}
 		In order to better adapt to the complex requirements defined in Section~\ref{def}, we have broken the tasks into four iterative cycles. Each cycle is planed to address a number of the design requirements witch must be develop in or near parallel do to the highly interconnected nature of the individual subsystems. 
