added a bunch of stuff and trevors pictures

--- a/ProjectProposal.tex
+++ b/ProjectProposal.tex
@@ -13,7 +13,8 @@
 			\item Demonstrate that the team has internalized the design challenge faced.
 		\end{enumerate}
 	\end{abstract}
-
+	
+\part{Technical}
 \section{Project Definition}\label{def}
 	This team has been assigned an industry sponsored project from ArcelorMittal USA, who need a way to track their industrial safety equipment within their buildings In order to build the specified system Team 6 will need to build three primary systems. The first being an Android application for operators to scan bar codes on safety locations and equipment. A web application to allow administrators to specify questions for specific pieces of safety equipment, and furthermore assign responsibility to workers. Finally a server infrastructure will be created to ensure data is held properly and securely, host the web application, connect to the Android app, and generate reports. 
 	\subsection{Scope}\label{scope}
@@ -82,14 +83,16 @@
 			so that Standers are verified  checklists should be generated to show those who are responsible for items witch items need to be checked to ensure compliance.
 		\end{itemize}
 		
-	\subsection{Work flow}
+	\subsection{Use example}
 		Here the team will use the data from the project description provided an example of how the team plans the how the system will be used.
 		  
-		\begin{figure}
-			\centering
-			\input{flow1.tex}
-			\caption{\label{flow1} Database entity relations Diagram}
-		\end{figure}
+		%\begin{figure}
+			%\centering
+			%\input{flow1.tex}
+			%\caption{\label{flow1} Database entity relations Diagram}
+		%\end{figure}
+		
+\section{Technical Design}
 	\subsection{Data Relations}
 		In order to see how items in the system are related to each other the team has created a entity relation diagram. \todo{Dose this add anything? It was usful for me}
 		\begin{figure}[h]
@@ -97,14 +100,16 @@
 			\input{DB_ER.tex}
 			\caption{\label{ERdiogram} Database entity relations Diagram}
 		\end{figure}
-	\subsection{Technical Design}
-		
-		\begin{figure}[h]
-			\centering
-			\input{SysConect.tex}
-			\caption{\label{sysConn} Database entity relations Diagram}
-		\end{figure}
 	
+		
+		%\begin{figure}[h]
+			%\centering
+			%\input{SysConect.tex}
+			%\caption{\label{sysConn} Database entity relations Diagram}
+		%\end{figure}
+\part{Cost}
+The only cost incured by the design team will be purchasing a nexus 7 tablet of the same model year or smiler the sponsors devices due to there security measures we are un able to use one of the sponsor owns devises. untill such time as one can be procured, a group member has volunteered there nexus7 tablet to be used.
+\part{Project Management}
 \section{Scheduling}
 		In order to better adapt to the complex requirements defined in Section~\ref{def}, we have broken the tasks into four iterative cycles. Each cycle is planed to address a number of the design requirements witch must be develop in or near parallel do to the highly interconnected nature of the individual subsystems. 
 		
