--- a/seting_etc.tex
+++ b/seting_etc.tex
@@ -13,8 +13,7 @@
 \usepackage{tikz}
 
 
-\usetikzlibrary{shapes.geometric, arrows}
-
+\usetikzlibrary{shapes.geometric,arrows,automata,calc,shapes, positioning}
 
 \newcommand{\labs}{\renewcommand{\chaptername}{Lab}}
 \newcommand{\Appendix}{	\makeatletter 
