added some pictures and a matrix for the databace

--- a/ProjectProposal.tex
+++ b/ProjectProposal.tex
@@ -93,8 +93,36 @@
 		%\end{figure}
 		
 \section{Technical Design}
+	
+	\subsection{Mobil Application}
+	\subsubsection{Mobil User Interface \& Experience}
+	
+	\begin{figure}[h]
+		
+		\begin{minipage}{0.5\textwidth}
+			\centering
+			\includegraphics{StartPage.png}
+			\caption{Mocup of Start Screen}
+		\end{minipage}%real title space need to be here?
+		\begin{minipage}{0.5\textwidth}
+			\centering
+			\includegraphics{SplashPage.png}
+			\caption{Mocup of splash screen}
+		\end{minipage}
+	\end{figure}
+	
+	\subsubsection{Off-line Mode}
+	
+	\subsection{Web Application}
+	
 	\subsection{Data Relations}
 		In order to see how items in the system are related to each other the team has created a entity relation diagram. \todo{Dose this add anything? It was usful for me}
+		\begin{figure}[h]
+			\centering
+			\input{DatabaceChart.tex}
+			\caption{\label{DBMatrix} Database Solution Selection Matrix}
+		\end{figure}
+		
 		\begin{figure}[h]
 			\centering
 			\input{DB_ER.tex}
@@ -107,6 +135,8 @@
 			%\input{SysConect.tex}
 			%\caption{\label{sysConn} Database entity relations Diagram}
 		%\end{figure}
+		
+	
 \part{Cost}
 The only cost incured by the design team will be purchasing a nexus 7 tablet of the same model year or smiler the sponsors devices due to there security measures we are un able to use one of the sponsor owns devises. untill such time as one can be procured, a group member has volunteered there nexus7 tablet to be used.
 \part{Project Management}
