--- a/gantChart.tex
+++ b/gantChart.tex
@@ -77,6 +77,7 @@
 	
 \end{ganttchart}}
 \centering
+\newline
 \begin{tikzpicture}[scale=0.6, every node/.style={scale=0.6}]
 \node [label=Critical Item,draw,fill=gray!50] (node1) {};
 \node [label={[name=l] Non Critical Item},draw,fill=white] (node2) at ([xshift=4cm]node1.east){};  
