welcome back to serif town

--- a/ProjectProposal.tex
+++ b/ProjectProposal.tex
@@ -114,8 +114,24 @@
 	\subsubsection{Off-line Mode}
 	
 	\subsection{Web Application}
+		To Build the web aplication the team chose Dajango based on the martrx.
+		\begin{itemize}
+			\item \textbf{Ruby on Rails} \\
+			Ruby on Rails is a web framework named Rails built in the languid Ruby and is comily referd to as Ruby on Rails. 
+			\item \textbf{Django} \\
+			Django is a python one the most popular web frameworks and is built in python. Django is well sported out of the box with numerous built in interfaces and a healthy ecosystem of free and open third-party add-ons to add interesting fetchers.
+			\item \textbf{Play} \\
+			Play is a Java Web framework
+			\item  \textbf{Express}\\
+			Express is a Node.js Web application framework.
+			\item \textbf{Laravel} \\
+			Laravel Is a popular PHP baced web framework
+			\item \textbf{Revel} \\
+			Revel is the go languige web framework. As with menny things in go there is one right way to do something and this is it.
+			
+		\end{itemize}
 	
-	\subsection{Data Relations}
+	\subsection{Data}
 		In order to see how items in the system are related to each other the team has created a entity relation diagram. \todo{Dose this add anything? It was usful for me}
 		\begin{figure}[h]
 			\centering
