Added some charty stuff for the web app

--- a/ProjectProposal.tex
+++ b/ProjectProposal.tex
@@ -131,6 +131,13 @@
 			
 		\end{itemize}
 	
+		\begin{figure}[h]
+			\centering
+			\input{WebFramworkChart.tex}
+			\caption{\label{WebMatrix} Web Framework Solution Selection Matrix}
+		\end{figure}
+	
+	
 	\subsection{Data}
 		In order to see how items in the system are related to each other the team has created a entity relation diagram. \todo{Dose this add anything? It was usful for me}
 		\begin{figure}[h]
