that - not being there was realy pissing me off

--- a/WebFramworkChart.tex
+++ b/WebFramworkChart.tex
@@ -19,7 +19,7 @@
 	Ease Of use           & 1  & 9  & 3  & 3  & 1  & 9  & 9  \\ \cline{2-8}
 	Learning curve        & 1  & 3  & 1  & 1  & 1  & 3  & 1  \\ \cline{2-8}
 	Stack fullness        & 9  & 9  & 9  & 9  & 9  & 1  & 9  \\ \cline{2-8}
-	Third party Ecosystem & 9  & 9  & 9  & 9  & 3  & 1  & 3  \\ \hhline{~------} % \hhline{~==========}
+	Third party Ecosystem & 9  & 9  & 9  & 9  & 3  & 1  & 3  \\ \hhline{~-------} % \hhline{~==========}
 	\textbf{Total} & \cellcolor{gray!20}23 & \cellcolor{gray!50}\textbf{39} & \cellcolor{gray!20}25 & \cellcolor{gray!20}25 & \cellcolor{gray!20}23 & \cellcolor{gray!20}17 & \cellcolor{gray!20}25 \\  \cline{2-8}
 	
 \end{tabular}
