did some writeing about the web framework

--- a/ProjectProposal.tex
+++ b/ProjectProposal.tex
@@ -114,7 +114,31 @@
 	\subsubsection{Off-line Mode}
 	
 	\subsection{Web Application}
-		To Build the web aplication the team chose Dajango based on the martrx.
+		In order to allow the Administrators to add safety equipment and inspection questions to the database, assassin ownership, set email reminder schedules, and generate reports, Design Team 3 must build a simple web application. In order to do so the design team will use a web app framework to build the fetchers required quickly and robustly.
+		\\
+		Based on the technical requirements and anticipated need Design Team 3 has devised the foling criteria to judge possible choses of web frameworks: 
+		\begin{itemize}
+			\item \textbf{Integrates With Sponsor IT}\\
+			Design Team 3s sponsor Arcelormittal USA uses a Microsoft windows baced infistrutur for its internal IT. This is significant because  most of the Internet and so most of the web frameworks are built around UNIX like operationg systems such as Linux or free BSD, While manny have been built to work in a windows environment we must deterin if that exists and if so how well.
+			
+			\item \textbf{Documentation}\\
+			One of the most important parts of any software library is the documentation, If a developer is required to dig thou source code to determine how a library works because there is no documentation witch shows how to use it the amount of time witch will be required will increse exponetoly and will result in code witch is more prow to Constantine defects.
+				
+			\item \textbf{Ease Of use} \\
+			The complexity of a framework can be quite large and part of that can be in the langige the framework is writing in. this requires Design Team 3 to determine how difficult stranded tasks such as serving a web parge, and dynamically creating content. By looking at slandered task the overall difficulty of building the full web application will be.	
+					
+			\item \textbf{Learning curve} \\
+			
+			
+			\item \textbf{Stack fullness} \\
+			
+			\item \textbf{Third party Ecosystem}\\
+			
+			
+		\end{itemize}
+		
+		Then we chose from the plethera of existing frameworks six witch would  
+		
 		\begin{itemize}
 			\item \textbf{Ruby on Rails} \\
 			Ruby on Rails is a web framework named Rails built in the languid Ruby and is comily referd to as Ruby on Rails. 
@@ -128,8 +152,9 @@
 			Laravel Is a popular PHP baced web framework
 			\item \textbf{Revel} \\
 			Revel is the go languige web framework. As with menny things in go there is one right way to do something and this is it.
-			
 		\end{itemize}
+		
+		
 	
 		\begin{figure}[h]
 			\centering
@@ -171,28 +196,28 @@ The only cost incured by the design team will be purchasing a nexus 7 tablet of 
 		In the first cycle the team pursues actions which move to the understanding of the finer details of the system it has been tasked to build. This cycle includes several instances of contact with the sponsor in order to both better understand the customers needs and build a relationship for ongoing communication. At the end of this cycle the team will deliver a project proposal to the faculty advisor and the project sponsor along with having verified that the most basic functionality of the database, web application, Android application and design mock-ups. 
 		
 		\begin{itemize}
-			\item\textbf{Meet with Sponsor:}(The Team)\\
+			\item\textbf{Meet with Sponsor:} (The Team)\\
 			The team prepares questions and meets in person with the Jim Lang from ArcelorMittal. In order to better understand the needs layed out in the project description. In this meeting the project sponsor was asked to describe key features and  what a successfully project looked like was discussed.
 			
-			\item \textbf{Solidify Understanding of Project:}(The Team)\\
+			\item \textbf{Solidify Understanding of Project:} (The Team)\\
 			In this task the Team meets to discuss what was learned in the meeting with the project sponsor previously. In order to layout the framework in which the team can build the requested system.
 			
-			\item\textbf{Additional Questions for Sponsor:}(The Team)\\
+			\item\textbf{Additional Questions for Sponsor:} (The Team)\\
 			After exhaustive discussion on the both the high level work flows and technical feasibility of the project the team will compose a set of questions to be electronically mailed to the project sponsor in order to clear up lingering discontinuity in the teams understanding of the system.
 			
-			\item\textbf{Set up Database:}(Alexandria \& Ian)\\
+			\item\textbf{Set up Database:} (Alexandria \& Ian)\\
 			In this task two team members will decide on a framework for building the server side infrastructure for the system. This will include choosing and setting up the server operating system, choosing the main programing language to be used for building the sever infrastructure.
 			
-			\item\textbf{Hello World on Tablet:}(Kyle)\\
+			\item\textbf{Hello World on Tablet:} (Kyle)\\
 			In this task a team member will build a simple hello world program for style of android tablet indicated by the project sponsor. In building a hello world program for the tablet the team member will also choose a library for decoding bar codes using the tablet camera. 
 			
-			\item\textbf{Draw Mock ups:}(Trevor)\\
+			\item\textbf{Draw Mock ups:} (Trevor)\\
 			In this task a team member will draw the initial designs for the user experiences that will be had in the various user portals of the system so that the project sponsor can have an idea of what the user interface will be like and can give us insights that will help all aspects of the teams design. 
 			
-			\item\textbf{Set up Web Page:}(Seth)\\
+			\item\textbf{Set up Web Page:} (Seth)\\
 			In this task a team member will setup an initial front end for the administrator websight. The team member will decide on a set of predefined web objects that can be used to build web applications witch will best allows the team to build an effective web application front end. 
 			
-			\item\textbf{Ask Clarifying questions for sponsor:}(The Team)\\
+			\item\textbf{Ask Clarifying questions for sponsor:} (The Team)\\
 			After facing the initial feasibility challenges involved in the building the main subsystem of the project the team will compile the design report and a number of clarifying questions for the sponsor in order to further refine the teams initial design decisions. 
 		\end{itemize}
 		
