--- a/seting_etc.tex
+++ b/seting_etc.tex
@@ -15,8 +15,8 @@
 \usepackage{xcolor,colortbl}
 \usepackage{array}
 \usepackage{hhline}
-%\usepackage{helvet}
-%\renewcommand{\familydefault}{\sfdefault}
+\usepackage{helvet}
+\renewcommand{\familydefault}{\sfdefault}
 \usetikzlibrary{shapes.geometric,arrows,automata,calc,shapes, positioning}
 
 
