--- a/ProjectProposal.tex
+++ b/ProjectProposal.tex
@@ -6,7 +6,7 @@
 	\input{title.tex}
 	%make the abstract
 	\begin{abstract}
-		Design Team 3 has been asked to create a system to keep track of safety equipment on ArcelorMittal's buildings. To do this the team needs to build some systems. These systems will enable administrators to both monitor compliance standards on areas they are in charge of, and make sure that safety equipment is being properly checked and documented. Reports will be sent out periodically on the above to said administrators.  On the user end, an Android application  that uses a scanner will be created that will enable users to quickly answer questions on safety equipment standards.  This project proposal is broken into the following parts:\todo{This jusmps around I to much}
+		Design Team 3 has been asked to create a system to keep track of safety equipment on ArcelorMittal's buildings. To do this the team needs to build some systems. These systems will enable administrators to both monitor compliance standards on areas they are in charge of, and make sure that safety equipment is being properly checked and documented. Reports will be sent out periodically on the above to said administrators.  On the user end, an Android application  that uses a scanner will be created that will enable users to quickly answer questions on safety equipment standards.  This project proposal is broken into the following parts:
 		\begin{enumerate}
 			\item The teams current understanding of the project.
 			\item Define the project in such a way that it will be easy to follow for developers that are maintaining the project for years to come.
@@ -52,21 +52,21 @@
 				\item Generate and send out reports
 			\end{itemize}
 		\end{itemize}
-	\subsection{Function Definition} \todo{I just played word match with the lists he had in the slides, we may need more of these}
+	\subsection{Function Definition} 
 		In order to justify the existence of items in Part~\ref{scope} the team created a number of function definitions. These definitions were then consolidated into the FAST diagram in Figure~\ref{fast1} along with a more detailed description.
 		\begin{figure}[h]
 			\centering
 			\input{FastDG.tex}
 			\caption{\label{fast1} FAST Digram}
 		\end{figure}
-		The Primary function for the project is \textbf{Ensure Compliance} This is the main goal of the system we have been commissioned to build. From our primary function are derived two secondary functions each having there own tertiary functions:\todo{I think the main probum with what i have here is that i dont talk abut how things are mesured}  
+		The Primary function for the project is \textbf{Ensure Compliance} This is the main goal of the system we have been commissioned to build. From our primary function are derived two secondary functions each having there own tertiary functions:
 		\begin{itemize}
 			\item Verify Standards:\\
 			In order to Ensure Compliance with all pertinent safety regulations the system must be able to check the and verify that all the stranded are being upheld in the various locations and across the numerous safety devices.
 			\item Keep Records:\\
 			In order to ensure that all of the safety laws and regulations are fallowed we mus keep records of all the locations witch must have safety equipment present in a building, what safety equipment must be present, and how to verrify that it is in working condition.  
 
-			\item Other \todo{add more things}
+			\item Other 
 		\end{itemize}
 		From the secondary function Keep Records we have derived: 
 		\begin{itemize}
@@ -164,7 +164,7 @@
 	
 	
 	\subsection{Data}
-		In order to see how items in the system are related to each other the team has created a entity relation diagram. \todo{Dose this add anything? It was usful for me}
+		In order to see how items in the system are related to each other the team has created a entity relation diagram.
 		\begin{figure}[h]
 			\centering
 			\input{DatabaceChart.tex}
@@ -215,7 +215,7 @@ The only cost incured by the design team will be purchasing a nexus 7 tablet of 
 			In this task a team member will draw the initial designs for the user experiences that will be had in the various user portals of the system so that the project sponsor can have an idea of what the user interface will be like and can give us insights that will help all aspects of the teams design. 
 			
 			\item\textbf{Set up Web Page:} (Seth)\\
-			In this task a team member will setup an initial front end for the administrator websight. The team member will decide on a set of predefined web objects that can be used to build web applications witch will best allows the team to build an effective web application front end. 
+			In this task a team member will setup an initial front end for the administrator web sight. The team member will decide on a set of predefined web objects that can be used to build web applications witch will best allows the team to build an effective web application front end. 
 			
 			\item\textbf{Ask Clarifying questions for sponsor:} (The Team)\\
 			After facing the initial feasibility challenges involved in the building the main subsystem of the project the team will compile the design report and a number of clarifying questions for the sponsor in order to further refine the teams initial design decisions. 
@@ -224,9 +224,10 @@ The only cost incured by the design team will be purchasing a nexus 7 tablet of 
 		
 		
 	\subsection{Interconnectivity}\label{connect}
-		
+		In the Interconnectivity step design team 3 will focus on building and testing connections between the baseline system, setup in \ref{cyc1}
 		\begin{itemize}
 			\item\textbf{Web speaks to Database:}\\
+			
 			
 			\item \textbf{Mobile speaks to Database:}\\
 			
