fixed the diagam

--- a/ProjectProposal.tex
+++ b/ProjectProposal.tex
@@ -178,11 +178,11 @@
 		\end{figure}
 	
 		
-		%\begin{figure}[h]
-			%\centering
-			%\input{SysConect.tex}
-			%\caption{\label{sysConn} Database entity relations Diagram}
-		%\end{figure}
+		\begin{figure}[h]
+			\centering
+			\input{SysConect.tex}
+			\caption{\label{sysConn} System Components}
+		\end{figure}
 		
 	
 \part{Cost}
